# test-henry

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_airflow.sh  runbook.md
dags/: .airflowignore  churn_pipeline_dag.py  pipeline.py
data/raw/: retailboost_customers.csv
docs/: challenge.md  challenge_2.md  class_script.md  class_suggestions.md
notebooks/: churn_pipeline_demo.ipynb  intro_ml_demo.ipynb  retailboost_practica.ipynb
